# AdventOfCode

./: .gitignore  create_script.sh
2021/day01/: main.go
2021/day02/: main.go
2021/day03/: main.go
2021/day04/: main.go
2021/day05/: main.go
2021/day06/: main.go
2021/day07/: main.go
2021/day08/: main.go
2021/day09/: main.go
2021/day10/: main.go
2021/day24/: main.go
2022/: test.sh
2022/day01/: day01  main.go
2022/day02/: main.go
2022/day03/: main.go
2022/day04/: main.go
2022/day05/: main.go
2022/day06/: main.go
2022/day07/: main.go
2022/day08/: main.go
2022/day10/: main.go
2022/day15/: main.go
2022/day18/: main.go
2022/day20/: main.go
2022/day21/: main.go
2023/: 2023.cpp  CMakeLists.txt  create_script.sh  day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp  day25.cpp
2023/assets/: day20.dot  day25.dot  log2
2023/input/: day24_sample.txt
2023/util/: CMakeLists.txt  grid.h  input.cpp  input.h
2024/: create_day.sh  test.sh
2024/day01/: main.go
2024/day02/: main.go
2024/day03/: main.go
2024/day04/: main.go
2024/day05/: main.go
2024/day06/: main.go
2024/day07/: main.go
2024/day08/: main.go
2024/day09/: main.go
2024/day10/: main.go
2024/day11/: main.go
2024/day12/: main.go
2024/day13/: main.go
2024/day14/: main.go
2024/day15/: main.go
2025/: create_day.sh  template.go
infi/2021/: in  (+2 more)
(+34 files in other folders)
